Add jsonnetfmt make targets and GH actions job
The commit adds a Makefile and Makefile.vars.mk pair that are inspired
by the Commodore component template to provide `jsonnetfmt` and
`jsonnetfmt_check` targets. The commit also adds a GitHub actions job
which calls `make -C gitlab jsonnetfmt_check`

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,3 +13,10 @@ jobs:
         with:
           github_token: ${{ secrets.github_token }}
           reporter: github-pr-review
+
+  jsonnetfmt:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - run: |
+          make -C gitlab jsonnetfmt_check
