--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,3 +20,14 @@ jobs:
       - uses: actions/checkout@v4
       - run: |
           make -C gitlab jsonnetfmt_check
+
+  shellcheck:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: reviewdog/action-shellcheck@v1
+        with:
+          reporter: github-pr-review
+          pattern: |
+            *.sh
+            step-*
